Changes in 0.3.1 -> dev copy: adding speak() to script help.

--- a/Resources/English.lproj/MudWalker Help/script/index.html
+++ b/Resources/English.lproj/MudWalker Help/script/index.html
@@ -74,6 +74,7 @@ end</pre>
   <li><code>new_lineString(<var>str[, role]</var>)</code> - creates a <code>MWLineString object.</code>
   <li><code>configPath(<var>str, str, ...</var>)</code> - returns a <code>MWConfigPath object with the specified components.</code>
   <li><code>soundNamed(<var>name</var>)</code> - returns a system sound, e.g. <code>soundNamed('Sosumi')</code>.</li>
+  <li><code>speak(<var>text[, voice-name]</var>)</code> - speak the text.
 </ul>
 
 <h3>Builtin Methods</h3>
