MudWalker Help: Made the section on logging somewhat more prominent and detailed.

--- a/Resources/English.lproj/MudWalker Help/index.html
+++ b/Resources/English.lproj/MudWalker Help/index.html
@@ -21,10 +21,13 @@
   <li><a href="script/index.html">Scripting</a>
 </ul>  
 
+<h2>Logging</h2>
+
+<p>Logs of all sessions are automatically saved into, starting from your home folder, <code>Library/Logs/MudWalker Log <var>document-name</var>.txt</code>. This is not yet configurable.</p>
+
 <h2>Known Problems</h2>
 
 <ul>
-  <li>Logs of all sessions are automatically saved into <code>Library/Logs/MudWalker Log <var>document-name</var>.txt</code>. This is not configurable.</li>
   <li>The "Expert Editor" settings pane doesn't actually allow editing anything.</li>
   <li>The "Key Macros" settings pane does not provide a nice way to specify keystrokes.</li>
 </ul>
